src/gateway/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${GATEWAY_APP_NAME}-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "0"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "0"
spec:
  rules:
    - host: mp3converter.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${GATEWAY_APP_NAME}
                port:
                  number: ${PORT_GATEWAY}
